the first update
- color scheme
- simplify
- text-indent for Chinese reading

--- a/_posts/2020-07-24-demo.md
+++ b/_posts/2020-07-24-demo.md
@@ -1,254 +1,58 @@
 ---
 layout: mypost
 title: 主题预览
-categories: [建站]
+categories: [example, 示例]
 ---
 
-# 标题
+文本来自[Fandom Arcaea Wiki](https://arcaea.fandom.com/wiki/Story/Luminous_Sky)。
 
-# 这里是 h1
+Text by [lowiro](https://lowiro.com/en-us/), from its game Arcaea.
 
-## 这里是 h2
+> A HARMONY OF **L**IGHT, AWAITS YOU IN A LOST WORLD OF MUSICAL **C**ONFLICT...
 
-### 这里是 h3
+> 一律和谐的光芒，正于那音乐纷争交错的失落世界中，等候着你…
 
-#### 这里是 h4
+> 「**光**の奏でる調和」が、「音が**対立**する」失われた世界で、あなたを待ち受ける…
 
-##### 这里是 h5
+# 3-1(h1)
 
-###### 这里是 h6
+## English(h2)
 
-```
-# 这里是 h1
-## 这里是 h2
-### 这里是 h3
-#### 这里是 h4
-##### 这里是 h5
-###### 这里是 h6
-```
+It’s early evening. Outside, the twilight amber flowing out from the sun tries to slip by without pause, but the devices within the surrounding meadows catch and spool it, changing it to rays more similar to what might be cast from the moon.
 
-## 段落
+The party has a certain atmosphere. Though there are no eyes without the manor, the fact is that maintaining an image is paramount to those of upper echelons. She knows this, all of this, innately. Sitting in a darker place, with sunlight captured and held at ceilings and staircases presently beyond her reach, she considers the implications of this knowledge in calm and in silence.
 
-段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落
+“Lavinia.”
 
-段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落
+She looks up from her wine glass. The fiancé (dressed very well, almost stuffily, but in casual posture) is standing before her.
 
-## 超链接
+“There isn’t actually wine in that glass, is there?”
 
-[TMaize Blog](http://blog.tmaize.net)
+She looks at it through her one proper eye. She answers: “It’s cider... Donovan.” “Good,” he says with a smile, looking out toward the rest of the room. She looks at his expression blankly.
 
-```
-[TMaize Blog](http://blog.tmaize.net)
-```
+## 中文（h2）
 
-## 引用
+夜色将至。屋外，太阳所溢出的琥珀色暮光马不停蹄地想要从天际溜走，奈何被草坪中的那几台装置捕捉并卷入，
+转变为近似月光的柔和射线。
 
-> 这里是引用
+这场宴会带有种独特的气氛。虽然庄园外一个人都没有，但是对上流人士来说，保持形象似乎比任何事都来得重要。她了解这一切——从一开始便是。她坐在较暗一点的地方，而被捕捉的阳光则重现于她如今无法触及的天花板与阶梯。少女静静地思考着潜藏于那些渊博知识之中的涵义。
 
-```
-> 这里是引用
-```
+“拉薇妮雅。”
 
-## 常见字体样式
+她的视线从葡萄酒杯上移走。而她的未婚夫（穿着整齐，甚至能用古板来形容，但是姿态相当轻松自如）正站在她的面前。
 
-_斜体_
+“这玻璃杯里装的应该不是葡萄酒，对吧？”
 
-**粗体**
+她用那只正常的眼睛注视着杯中的液体，答道：“这是苹果酒……多纳文。” “不错。”他笑着回应，一边环顾房间的四周。少女茫然地瞧着他的表情。
 
-~~删除线~~
+## 日本語（h2）
 
-```
-_斜体_
-**粗体**
-~~删除线~~
-```
+それは夕暮れ、黄昏のころ。野外にて、太陽より琥珀色の夕焼けが絶え間なく降り注いでいる。しかし辺り一帯を埋め尽くす機械類が、その光を受け止めては巻き取っている。そうして日差しはやがて月が投げかけるそれに近しいものになっていく、そんな頃。
 
-## 列表
+そのパーティには独特な風格があった。館は周囲からは隔離されていて、覗く者などはいない。しかし、特権階級の品格を維持するのはそこに立つ者たちの最大の義務である。彼女はその不文律をよく、考えずともいいほどに良く知っていた。今は日差しに囚われ、手の届かぬほど高い屋根と螺旋階段が交わる薄暗い場所に座りながら、彼女は義務にまつわることに思いを巡らせている。
 
-- 无序列表 1-1
+「ラヴィニア」
 
-  缩进 2 空格
+ワイングラスから視線を上げれば、自身の婚約者が気取らない佇まいで目前にいた。もはや息苦しいほどに着飾りながらも、その様子に不必要に飾るところはない。「それはまさかワインじゃないだろうね」
 
-  - 缩进 2 空格
-  - 缩进 2 空格
-
-- 无序列表 1-2
-- 无序列表 1-3
-
-1. 有序列表 1-1
-
-   缩进 3 空格
-
-   1. 缩进 3 空格
-   2. 缩进 3 空格
-
-2. 有序列表 1-2
-3. 有序列表 1-3
-
-```
-- 无序列表 1-1
-
-  缩进 2 空格
-
-  - 缩进 2 空格
-  - 缩进 2 空格
-
-- 无序列表 1-2
-- 无序列表 1-3
-
-1. 有序列表 1-1
-
-   缩进 3 空格
-
-   1. 缩进 3 空格
-   2. 缩进 3 空格
-
-2. 有序列表 1-2
-3. 有序列表 1-3
-```
-
-## 分割线
-
----
-
-```
----
-```
-
-## 图片
-
-破事水![line](emoji_01.png)
-滑稽![line](emoji_02.png)
-
-```md
-![line](http://xx.com/xx.jpg)
-```
-
-块级别图片
-
-```md
-![测试图片](001.jpg)
-```
-
-![测试图片](001.jpg)
-
-## 代码行
-
-这是一段文字`rm -rf /*`这是一段文字
-
-```
-这是一段文字`rm -rf /*`这是一段文字
-```
-
-## 代码块
-
-```javascript
-blog.encodeHtml = function(html) {
-  var o = document.createElement('div')
-  o.innerText = html
-  var temp = o.innerHTML
-  o = null
-  return temp
-}
-```
-
-````
-​```javascript
-blog.encodeHtml = function(html) {
-var o = document.createElement('div')
-o.innerText = html
-var temp = o.innerHTML
-o = null
-return temp
-}
-```
-````
-
-## 表格测试
-
-| Tables        |      Are      |   Cool |
-| ------------- | :-----------: | -----: |
-| col 3 is      | right-aligned | \$1600 |
-| col 2 is      |   centered    |   \$12 |
-| zebra stripes |   are neat    |    \$1 |
-
-​```md
-| Tables        |      Are      |   Cool |
-| ------------- | :-----------: | -----: |
-| col 3 is      | right-aligned | \$1600 |
-| col 2 is      |   centered    |   \$12 |
-| zebra stripes |   are neat    |    \$1 |
-```
-
-## 数学公式
-
-需要在配置中开启
-
-这是一行话`\( \int_0^\infty \frac{x^3}{e^x-1}\,dx = \frac{\pi^4}{15} \)`这是一行话
-
-`\[ \int_0^\infty \frac{x^3}{e^x-1}\,dx = \frac{\pi^4}{15} \]`
-
-## 插入 html
-
-<div id="htmldemo"></div>
-<style>
-#htmldemo{
-    height: 30px;
-    width: 30px;
-    background-color: #00aa9a;
-    animation-name: moveX;
-    animation-duration: 1s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-fill-mode : both;
-}
-@keyframes moveX {
-    0%{
-        transform: translateX(0px);
-    }
-    100%{
-        transform: translateX(100px);
-    }
-}
-</style>
-
-```html
-<div id="htmldemo"></div>
-<style>
-  #htmldemo {
-    height: 30px;
-    width: 30px;
-    background-color: #00aa9a;
-    animation-name: moveX;
-    animation-duration: 1s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-fill-mode: both;
-  }
-  @keyframes moveX {
-    0% {
-      transform: translateX(0px);
-    }
-    100% {
-      transform: translateX(100px);
-    }
-  }
-</style>
-```
-
-## 插入 iframe
-
-<iframe src="//music.163.com/outchain/player?type=2&id=28445796&auto=0&height=66" frameborder="0" width="100%" height="86px" ></iframe>
-
-```html
-<!-- 属性什么的不要错了，最好用双引号括住 -->
-<!-- 网易云的iframe需要做些调整，调整如下 -->
-<iframe
-  src="//music.163.com/outchain/player?type=2&id=28445796&auto=0&height=66"
-  frameborder="0"
-  width="100%"
-  height="86px"
-></iframe>
-```
+自身に残された唯一の片目で見つめつつ、「ただのサイダーよ…ドノヴァン」と答えた。 それを受けて「そうか」と笑うと、ふと部屋を見遣る。そんなドノヴァンの様子をなんとなく眺めていると、ニヤリと笑みを浮かべた。
